[package]
name = "disk-based-bfs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.16.1"
cityhasher = "0.1.0"
itertools = "0.13.0"
libc = "0.2.155"
parking_lot = "0.12.3"
rand = "0.8.5"
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
thiserror = "1.0.63"
tracing = "0.1.40"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
