[package]
name = "disk-based-bfs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.18.0"
cityhasher = "0.1.0"
fs4 = "0.9.1"
itertools = "0.13.0"
libc = "0.2.159"
parking_lot = "0.12.3"
rand = "0.8.5"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.64"
tracing = "0.1.40"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
zstd = "0.13.2"
